<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/nofa"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/foto"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/nama"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/text_kecil"
                android:text="@string/mahasiswa"/>
            <TextView
                style="@style/text_konten"
                android:text="@string/tentang"
                android:textColor="@android:color/black"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/text_kecil"
                    android:text="@string/detail"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/text_kecil"
                    android:text="@string/almt"/>
                <TextView
                    style="@style/text_konten"
                    android:text="@string/alamat"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/text_kecil"
                    android:text="@string/tmpt"/>
                <TextView
                    style="@style/text_konten"
                    android:text="@string/tempat"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/text_kecil"
                    android:text="@string/tl"/>
                <TextView
                    style="@style/text_konten"
                    android:text="@string/t_lahir"
                    android:textColor="@android:color/black"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/text_kecil"
                android:text="@string/dibuat"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/upgris"/>

                <TextView
                    style="@style/text_konten"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/pembuat"
                    android:textColor="@android:color/black" />

            </TableRow>

        </TableLayout>

        <TextView
            style="@style/text_info"
            android:text="@string/kontak"
            android:textColor="@android:color/black"/>

        <Button
            style="@style/tombol"
            android:id="@+id/btn_dial"
            android:text="@string/phone"/>

        <TextView
            style="@style/text_info"
            android:text="@string/project"
            android:textColor="@android:color/black"/>

        <Button
            style="@style/tombol"
            android:id="@+id/btn_uts"
            android:text="@string/uts" />

    </LinearLayout>
</ScrollView>